updated publications page

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,10 +2,10 @@
 ---
 
 @article{yacoby2022psa,
-  abbr={Pre-Print, CHI HCXAI},
+  abbr={Submitted: HCOMP, CHI HCXAI},
   title={"If it didn't happen, why would I change my decision?": How Judges Respond to Counterfactual Explanations for the Public Safety Assessment},
   author={Yacoby, Yaniv and Green, Ben and Griffin, Christopher L. and Doshi-Velez, Finale},
-  journal={Pre-Print},
+  journal={In submission to HCOMP},
   year={2022},
   workshop_title={CHI HCXAI},
   workshop_year={2022},
@@ -17,10 +17,10 @@
 
 
 @article{yacoby2019mitigating,
-  abbr={Pre-Print, ICML UDL},
+  abbr={Submitted: JMLR, ICML UDL},
   title={Mitigating the Effects of Non-Identifiability on Inference for Bayesian Neural Networks with Latent Variables},
   author={*Yacoby, Yaniv and *Pan, Weiwei and Doshi-Velez, Finale},
-  journal={Pre-Print},
+  journal={In submission to JMLR},
   year={2022},
   workshop_title={ICML UDL},
   workshop_year={2019},
@@ -34,10 +34,10 @@
 
 
 @article{yacoby2020failure,
-  abbr={Pre-Print, ICML UDL},
+  abbr={Submitted: JMLR, ICML UDL},
   title={Failure Modes of Variational Autoencoders and Their Effects on Downstream Tasks},
   author={Yacoby, Yaniv and Pan, Weiwei and Doshi-Velez, Finale},
-  journal={Pre-Print},
+  journal={In submission to JMLR},
   year={2022},
   workshop_title={ICML UDL},
   workshop_year={2022},  
@@ -48,10 +48,10 @@
 
 
 @article{thakur2020uncertainty,
-  abbr={Pre-Print, ICML UDL},
+  abbr={Submitted: JMLR, ICML UDL},
   title={Uncertainty-Aware (UNA) Bases for Deep Bayesian Regression Using Multi-Headed Auxiliary Networks},
   author={*Thakur, Sujay and *Lorsung, Cooper and *Yacoby, Yaniv and Doshi-Velez, Finale and Pan, Weiwei},
-  journal={Pre-Print},
+  journal={In submission to JMLR},
   year={2022},
   workshop_title={ICML UDL},
   workshop_year={2020},    
