--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,10 +2,20 @@
 ---
 
 @article{yacoby2022psa,
-  abbr={Submitted: HCOMP, CHI HCXAI},
+  abbr={Submitted: SIGCSE},
+  title={Empowering First-Year Computer Science Ph.D. Students to Create a Culture that Values Community and Mental Health},
+  author={Yacoby, Yaniv and Girash, John and Parkes, David C.},
+  journal={In submission to SIGCSE},
+  year={2022},
+  abstract={Doctoral programs often have high rates of depression, anxiety, isolation, and imposter phenomenon. Consequently, graduating students may feel inadequately prepared for research-focused careers, contributing to an attrition of talent. Prior work identifies an important contributing factor to maladjustment: that, even with prior exposure to research, entering Ph.D. students often have problematically idealized views of science. These preconceptions can become obstacles for students in their own professional growth. Unfortunately, existing curricular and extracurricular programming in many doctoral programs do not include mechanisms to systematically address students' misconceptions of their profession. In this work, we describe a new initiative at our institution that aims to address Ph.D. mental health via a mandatory seminar for entering doctoral students. The seminar is designed to build professional resilience in students by (1) increasing self-regulatory competence, and (2) teaching students to proactively examine academic cultural values, and to participate in shaping them. Our evaluation indicates that students improved in both areas after completing the seminar.},
+  pdf={https://arxiv.org/abs/2208.12650},
+}
+
+@article{yacoby2022psa,
+  abbr={HCOMP, CHI HCXAI},
   title={"If it didn't happen, why would I change my decision?": How Judges Respond to Counterfactual Explanations for the Public Safety Assessment},
   author={Yacoby, Yaniv and Green, Ben and Griffin, Christopher L. and Doshi-Velez, Finale},
-  journal={In submission to HCOMP},
+  journal={Accepted at HCOMP},
   year={2022},
   workshop_title={CHI HCXAI},
   workshop_year={2022},
@@ -14,7 +24,6 @@
   presentation_type={Oral Presentation},
   presentation_url={},
 }
-
 
 @article{yacoby2019mitigating,
   abbr={Submitted: JMLR, ICML UDL},
