--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 ---
 ---
 
-@article{yacoby2022psa,
+@article{yacoby2022cs290,
   abbr={Submitted: SIGCSE},
   title={Empowering First-Year Computer Science Ph.D. Students to Create a Culture that Values Community and Mental Health},
   author={Yacoby, Yaniv and Girash, John and Parkes, David C.},
