--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,10 +2,11 @@
 ---
 
 @article{yacoby2023cs290,
-  abbr={Submitted: SIGCSE},
+  insubmission={yes},
+  abbr={SIGCSE},
   title={Empowering First-Year Computer Science Ph.D. Students to Create a Culture that Values Community and Mental Health},
   author={Yacoby, Yaniv and Girash, John and Parkes, David C.},
-  journal={In submission to SIGCSE},
+  journal={SIGCSE},
   year={2023},
   abstract={Doctoral programs often have high rates of depression, anxiety, isolation, and imposter phenomenon. Consequently, graduating students may feel inadequately prepared for research-focused careers, contributing to an attrition of talent. Prior work identifies an important contributing factor to maladjustment: that, even with prior exposure to research, entering Ph.D. students often have problematically idealized views of science. These preconceptions can become obstacles for students in their own professional growth. Unfortunately, existing curricular and extracurricular programming in many doctoral programs do not include mechanisms to systematically address students' misconceptions of their profession. In this work, we describe a new initiative at our institution that aims to address Ph.D. mental health via a mandatory seminar for entering doctoral students. The seminar is designed to build professional resilience in students by (1) increasing self-regulatory competence, and (2) teaching students to proactively examine academic cultural values, and to participate in shaping them. Our evaluation indicates that students improved in both areas after completing the seminar.},
   pdf={https://arxiv.org/abs/2208.12650},
@@ -15,38 +16,39 @@
   abbr={HCOMP, CHI HCXAI},
   title={"If it didn't happen, why would I change my decision?": How Judges Respond to Counterfactual Explanations for the Public Safety Assessment},
   author={Yacoby, Yaniv and Green, Ben and Griffin, Christopher L. and Doshi-Velez, Finale},
-  journal={Accepted at HCOMP},
+  journal={HCOMP},
   year={2022},
   workshop_title={CHI HCXAI},
   workshop_year={2022},
   abstract={Many researchers and policymakers have expressed excitement about how algorithmic explanations may enable more fair and responsible decision-making. However, recent experimental studies have found that explanations do not always improve human use of algorithmic advice. In this study, we shed light on how people interpret and respond to counterfactual explanations (CFEs) -- an explanation that shows how a model's output changes with marginal changes to an input -- in the context of pretrial risk assessment instruments (PRAIs). We ran think-aloud trials with eight sitting US state court judges, providing them with recommendations from the PRAI as well as CFEs. At first, judges misinterpreted the counterfactuals as real---rather than hypothetical---changes to defendants. Once judges understood what the counterfactuals meant, they ignored them, stating they must make decisions based only on the actual defendant in question. They also expressed a mix of reasons for ignoring or following the advice of the PRAI. These results add to the literature on how people use algorithms and explanations in unexpected ways and the challenges associated with creating effective human-algorithm collaboration.},
   pdf={https://arxiv.org/abs/2205.05424},
-  presentation_type={Oral Presentation},
-  presentation_url={},
+  workshop_presentation_type={Oral Presentation},
+  workshop_presentation_url={},
 }
 
 @article{yacoby2019mitigating,
-  abbr={Submitted: JMLR, ICML UDL},
+  abbr={JMLR, ICML UDL},
   title={Mitigating the Effects of Non-Identifiability on Inference for Bayesian Neural Networks with Latent Variables},
   author={*Yacoby, Yaniv and *Pan, Weiwei and Doshi-Velez, Finale},
-  journal={In submission to JMLR},
+  journal={JMLR},
   year={2022},
   workshop_title={ICML UDL},
   workshop_year={2019},
   abstract={Bayesian Neural Networks with Latent Variables (BNN+LVs) capture predictive uncertainty by explicitly modeling model uncertainty (via priors on network weights) and environmental stochasticity (via a latent input noise variable). In this work, we first show that BNN+LV suffers from a serious form of non-identifiability: explanatory power can be transferred between the model parameters and latent variables while fitting the data equally well. We demonstrate that as a result, in the limit of infinite data, the posterior mode over the network weights and latent variables is asymptotically biased away from the ground-truth. Due to this asymptotic bias, traditional inference methods may in practice yield parameters that generalize poorly and misestimate uncertainty. Next, we develop a novel inference procedure that explicitly mitigates the effects of likelihood non-identifiability during training and yields high-quality predictions as well as uncertainty estimates. We demonstrate that our inference method improves upon benchmark methods across a range of synthetic and real data-sets.},
   pdf={https://arxiv.org/abs/1911.00569},
-  presentation_type={Spotlight Talk},
-  presentation_url={},
+  workshop_presentation_type={Spotlight Talk},
+  workshop_presentation_url={},
   selected={true},
 }
 
 
 
 @article{yacoby2020failure,
-  abbr={Submitted: JMLR, ICML UDL},
+  insubmission={yes},
+  abbr={JMLR, ICML UDL},
   title={Failure Modes of Variational Autoencoders and Their Effects on Downstream Tasks},
   author={Yacoby, Yaniv and Pan, Weiwei and Doshi-Velez, Finale},
-  journal={In submission to JMLR},
+  journal={JMLR},
   year={2022},
   workshop_title={ICML UDL},
   workshop_year={2022},  
@@ -57,10 +59,11 @@
 
 
 @article{thakur2020uncertainty,
-  abbr={Submitted: JMLR, ICML UDL},
+  insubmission={yes},
+  abbr={JMLR, ICML UDL},
   title={Uncertainty-Aware (UNA) Bases for Deep Bayesian Regression Using Multi-Headed Auxiliary Networks},
   author={*Thakur, Sujay and *Lorsung, Cooper and *Yacoby, Yaniv and Doshi-Velez, Finale and Pan, Weiwei},
-  journal={In submission to JMLR},
+  journal={JMLR},
   year={2022},
   workshop_title={ICML UDL},
   workshop_year={2020},    
@@ -97,15 +100,16 @@
   abbr={AABI, PMLR},
   title={Characterizing and Avoiding Problematic Global Optima of Variational Autoencoders},
   author={Yacoby, Yaniv and Pan, Weiwei and Doshi-Velez, Finale},
-  booktitle={Symposium on Advances in Approximate Bayesian Inference},
+  booktitle={AABI},
   pages={1--17},
   year={2019},
   organization={PMLR},
-  abstract={Variational Auto-encoders (VAEs) are deep generative latent variable models consisting of two components: a generative model that captures a data distribution p(x) by transforming a distribution p(z) over latent space, and an inference model that infers likely latent codes for each data point (Kingma and Welling, 2013). Recent work shows that traditional training methods tend to yield solutions that violate modeling desiderata: (1) the learned generative model captures the observed data distribution but does so while ignoring the latent codes, resulting in codes that do not represent the data (e.g. van den Oord et al. (2017); Kim et al. (2018)); (2) the aggregate of the learned latent codes does not match the prior p(z). This mismatch means that the learned generative model will be unable to generate realistic data with samples from p(z)(e.g. Makhzani et al. (2015); Tomczak and Welling (2017)). In this paper, we demonstrate that both issues stem from the fact that the global optima of the VAE training objective often correspond to undesirable solutions. Our analysis builds on two observations: (1) the generative model is unidentifiable - there exist many generative models that explain the data equally well, each with different (and potentially unwanted) properties and (2) bias in the VAE objective - the VAE objective may prefer generative models that explain the data poorly but have posteriors that are easy to approximate. We present a novel inference method, LiBI, mitigating the problems identified in our analysis. On synthetic datasets, we show that LiBI can learn generative models that capture the data distribution and inference models that better satisfy modeling assumptions when traditional methods struggle to do so.},
+  abstract={Variational Auto-encoders (VAEs) are deep generative latent variable models consisting of two components: a generative model that captures a data distribution p(x) by transforming a distribution p(z) over latent space, and an inference model that infers likely latent codes for each data point. Recent work shows that traditional training methods tend to yield solutions that violate modeling desiderata: (1) the learned generative model captures the observed data distribution but does so while ignoring the latent codes, resulting in codes that do not represent the data; (2) the aggregate of the learned latent codes does not match the prior p(z). This mismatch means that the learned generative model will be unable to generate realistic data with samples from p(z). In this paper, we demonstrate that both issues stem from the fact that the global optima of the VAE training objective often correspond to undesirable solutions. Our analysis builds on two observations: (1) the generative model is unidentifiable - there exist many generative models that explain the data equally well, each with different (and potentially unwanted) properties and (2) bias in the VAE objective - the VAE objective may prefer generative models that explain the data poorly but have posteriors that are easy to approximate. We present a novel inference method, LiBI, mitigating the problems identified in our analysis. On synthetic datasets, we show that LiBI can learn generative models that capture the data distribution and inference models that better satisfy modeling assumptions when traditional methods struggle to do so.},
   pdf={https://arxiv.org/abs/2003.07756},
   presentation_type={Spotlight Talk},
   presentation_url={},
   selected={true},
+  note={Additionally selected for publication @ <em>PMLR</em> 2019 <abbr class="badge talk">Top 33\%</abbr>},
 }
 
 
