--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,9 +12,9 @@
   pdf={https://arxiv.org/abs/2208.12650},
 }
 
-@article{yao2022,
+@article{yao2022empirical,
   insubmission={yes},
-  abbr={NeurIPS ICBINB},
+  abbr={ICBINB},
   title={An Empirical Analysis of the Advantages of Finite vs. Infinite Width Bayesian Neural Networks},
   author={Yao, Jiayu and Yacoby, Yaniv and Coker, Beau and Pan, Weiwei and Doshi-Velez, Finale.},
   journal={NeurIPS ICBINB},
