--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,12 +12,13 @@
 }
 
 @article{yao2022empirical,
-  abbr={GPSMDMS},
+  abbr={ICBINB},
   title={An Empirical Analysis of the Advantages of Finite vs. Infinite Width Bayesian Neural Networks},
   author={Yao, Jiayu and Yacoby, Yaniv and Coker, Beau and Pan, Weiwei and Doshi-Velez, Finale},
-  journal={NeurIPS GPSMDMS},
+  journal={NeurIPS ICBINB},
   year={2022},
-  abstract={Understanding the relative advantages of finite versus infinite-width neural networks (NNs) is important for model selection. However, comparing NNs with different widths is challenging because, as the width increases, multiple model properties change simultaneously --  model capacity increases while the model becomes less flexible in learning features from the data. Analyses of Bayesian neural networks (BNNs) is even more difficult because inference in the finite width case is intractable. In this work, we  empirically compare finite and infinite width BNNs, and provide quantitative and qualitative explanations for their performance difference. We find that when the limiting model is mis-specified, increasing the width can reduce the generalization performance of BNNs. In these cases, we provide evidence that finite BNNs generalize better partially due to the properties of their frequency spectrum that allows them to adapt under model mismatch.},
+  abstract={Comparing Bayesian neural networks (BNNs) with different widths is challenging because, as the width increases, multiple model properties change simultaneously, and, inference in the finite-width case is intractable. In this work, we empirically compare finite- and infinite-width BNNs, and provide quantitative and qualitative explanations for their performance difference. We find that when the model is mis-specified, increasing width can hurt BNN performance. In these cases, we provide evidence that finite-width BNNs generalize better partially due to the properties of their frequency spectrum that allows them to adapt under model mismatch.},
+  pdf={https://arxiv.org/pdf/2211.09184.pdf},
 }
 
 @article{yacoby2019mitigating,
