--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,7 +18,7 @@
   journal={NeurIPS ICBINB},
   year={2022},
   abstract={Comparing Bayesian neural networks (BNNs) with different widths is challenging because, as the width increases, multiple model properties change simultaneously, and, inference in the finite-width case is intractable. In this work, we empirically compare finite- and infinite-width BNNs, and provide quantitative and qualitative explanations for their performance difference. We find that when the model is mis-specified, increasing width can hurt BNN performance. In these cases, we provide evidence that finite-width BNNs generalize better partially due to the properties of their frequency spectrum that allows them to adapt under model mismatch.},
-  pdf={https://arxiv.org/pdf/2211.09184.pdf},
+  pdf={https://arxiv.org/abs/2211.09184},
 }
 
 @article{yacoby2019mitigating,
